# image-to-ascii

./: .gitignore  CMakeLists.txt  README.md
include/: directories.h  image.h  image_processing.h  util.h
lib/: stb_image.h  stb_image_resize2.h
src/: image.cpp  image_processing.cpp  main.cpp  util.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  image_construction_tests.cpp
